feat: add PWA support with vite-plugin-pwa and create manifest.json

--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/projects/favicon.svg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="public/projects/favicon.png" />
+
+    <!-- PWA Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#111827" /> <!-- Cor da barra de status em mobile -->
+    <meta name="description" content="Portfolio DevFrank" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="DevFrank Portfolio">
+
+    <!-- Apple touch icon -->
+    <link rel="apple-touch-icon" href="/projects/favicon.png" />
+
+    <!-- Manifest PWA -->
+    <link rel="manifest" href="/manifest.json" />
+
     <title>DevFrank || Portfolio</title>
   </head>
   <body>
