fix: correct favicon path and update page title in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="public/projects/favicon.png" />
+    <link rel="icon" type="image/png" href="/projects/favicon.png" />
 
     <!-- PWA Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,7 @@
     <!-- Manifest PWA -->
     <link rel="manifest" href="/manifest.json" />
 
-    <title>DevFrank || Portfolio</title>
+    <title>DevFrank</title>
   </head>
   <body>
     <div id="root"></div>
